--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "skeleton"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.15.2",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
@@ -28,11 +29,15 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "eslint": "^4.19.1",
+    "eslint-config-fullstack": "^5.0.0",
+    "eslint-plugin-react": "^7.8.2",
     "volleyball": "^1.4.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13"
