--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "skeleton"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "chalk": "^2.4.1",
-    "axios": "^0.18.0",
     "express": "^4.14.0",
     "pg": "^7.4.3",
     "react": "^16.3.2",
@@ -26,6 +26,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.7",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.37.8"
