--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "senior-enrichment",
+  "name": "senior_enrichment",
   "version": "0.0.1",
   "description": "A review time project",
   "main": "main.js",
@@ -8,7 +8,8 @@
     "start-server": "nodemon --watch server main.js -e html,js,css",
     "build-watch": "webpack -w",
     "start": "echo 'Running server for production - developers, use npm run start:dev for development' && node main",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "test": "export NODE_ENV=test && mocha **/*.test.js"
   },
   "keywords": [
     "react",
@@ -19,6 +20,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.18.2",
     "chalk": "^2.4.1",
+    "dotenv": "^7.0.0",
     "express": "^4.14.0",
     "pg": "^7.4.3",
     "react": "^16.3.2",
@@ -43,7 +45,10 @@
     "eslint": "^4.19.1",
     "eslint-config-fullstack": "^5.0.0",
     "eslint-plugin-react": "^7.8.2",
+    "expect": "^24.5.0",
+    "mocha": "^6.0.2",
     "style-loader": "^0.21.0",
+    "supertest": "^4.0.2",
     "volleyball": "^1.5.1",
     "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
