--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start-server": "nodemon --watch server main.js -e html,js,css",
     "build-watch": "webpack -w",
     "start": "echo 'Running server for production - developers, use npm run start:dev for development' && node main",
-    "seed": "node seed.js",
+    "seed": "export NODE_ENV=development && node seed.js",
     "test": "export NODE_ENV=test && mocha **/*.test.js"
   },
   "keywords": [
