--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "redux-form": "^8.1.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "sequelize": "^4.37.8"
+    "sequelize": "^4.37.8",
+    "styled-jsx": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
