campus and students fetching

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A review time project",
   "main": "main.js",
   "scripts": {
-    "start:dev": "npm run build-watch & npm run start-server",
+    "start:dev": "export NODE_ENV=development && npm run build-watch & npm run start-server",
     "start-server": "nodemon --watch server main.js -e html,js,css",
     "build-watch": "webpack -w",
     "start": "echo 'Running server for production - developers, use npm run start:dev for development' && node main",
