--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "skeleton"
   ],
   "dependencies": {
+    "animejs": "^3.0.1",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
